# GenShinSignIn

./: .bandit  .flake8  .gitignore  README.md  config.py  generator.py  genshin.py  loader.py  login.py  main.py  main_multi.py  mihoyobbs.py  pyproject.toml  requirements.txt  serverless.py  setting.py  template.yml  tools.py  utils.py
.github/workflows/: codeql-analysis.yml  version-test.yml
ali-fc/: index.py
config/: README.md  config.json
tests/: test_utils.py
