[tool.poetry]
name = "genshinsignin"
version = "0.1.0"
description = "automate genshin sign in tool"
authors = ["harumonia <zxjlm233@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
loguru = "^0.5.3"
pyperclip = "^1.8.2"
playwright = "^1.22.0"
rich = "^10.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
